# imglang

./: Cargo.toml  README.md  yeet
.github/workflows/: main.yml
src/: chunk.rs  compiler.rs  debugger.rs  externals.rs  heap.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  stack.rs  types.rs  utils.rs  vm.rs
tests/: external.rs  heap_rc.rs  interpreter_test.rs  lexer_test.rs  parser_test.rs  scripts.rs
tests/scripts/: alternate.input  alternate.output  counter.input  counter.output  enum.input  enum.output  enum_comparison.input  fibonacci.input  fibonacci.output  functions.input  functions.output  if_else.input  if_else.output  nested_scopes.input  nested_scopes.output  variables.input  variables.output
